--- a/index.html
+++ b/index.html
@@ -1,91 +1,11 @@
 <!doctype html>
 <html>
 	<head>
-
+		<title>Vampy Bot for Granbluefantasy International</title>
 		<link rel="stylesheet" href="css/bootstrap-flex.min.css">
 		<link rel="stylesheet" href="css/styles.css">
-		<style>
-		
-			body {
-			    background-color: rgb(42, 45, 50);
-				color: rgba(255,255,255,.6);
-			}
-			
-			a {
-				color: #EB6B56;
-			}
-			
-			a:hover {
-				color: #D14841;
-			}
-			
-			.jumbotron {
-				background-color: #EB6B56;
-				padding: 10px 0px;
-			}
-			
-			.tag-default {
-				background-color: rgba(255,255,255,.4);
-			}
-			
-			h1,h2,h3,h4,h5,h6 {
-				color: #FFF;
-			}
-			
-			thead {
-				color: rgba(255,255,255,.9);
-			}
-			
-			.table {
-				margin-bottom: 3rem;
-			}
-			
-			.table-inverse {
-			  color: rgba(255,255,255,.5);
-			  background-color: #373a3c;
-			}
-
-			.table-inverse th,
-			.table-inverse td,
-			.table-inverse thead th {
-			  border-color: #282b30;
-			}
-			
-			.table-inverse.table-bordered {
-			  border: 1px solid #282b30;
-			}
-			
-			.table-striped tbody tr:nth-of-type(odd) {
-			  background-color: rgba(0, 0, 0, 0.15);
-			}
-			
-			.card {
-				color: #AAA;
-				background-color: rgba(0, 0, 0, 0.15);
-				margin-bottom: 3rem;
-			}
-			.img-fluid {
-				max-height: 150px;
-				margin: 0 5px 5px 0;
-			}
-			
-			.circular {
-				width: 70px;
-				height: 70px;
-				border-radius: 35px;
-				-webkit-border-radius: 35px;
-				-moz-border-radius: 35px;
-			}
-				
-			code {
-				color: #F37934;
-			}
-			
-			.emoji-grid {
-				margin-bottom: 3rem;
-			}
-		</style>
 		<script src="js/bootstrap.min.js"></script>
+		
 	</head>
 	<body>
 	<div class="jumbotron jumbotron-fluid">
