--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
 				      <td>!poke @Name</td>
 				    </tr>
 				    <tr>
-				      <th scope="row">!Suplex</th>
+				      <th scope="row">!suplex</th>
 				      <td>Use Djeeta in wrestler form to suplex someone's avatar.</td>
 				      <td>!suplex @Name</td>
 				    </tr>
 				    <tr>
-				      <th scope="row">!Slam</th>
+				      <th scope="row">!slam</th>
 				      <td>Mad at someone? Slam them with Chaos Lewder.</td>
 				      <td>!slam @Name</td>
 				    </tr>
@@ -187,64 +187,75 @@
 				</div>
 				
 				<h5>Aoshi's works<h5>
+				<p>
+					For more of Aoshi's work, please check our her twitter at <a href="https://twitter.com/AoshiArt">https://twitter.com/AoshiArt</a>
+				</p>
 				<div class='emoji-grid'>
-				<figure class="figure">
-				  	<img src="images/vira.png" class="figure-img img-fluid" alt="!emo vira" data-toggle="tooltip" data-placement="bottom" title="!emo vira">
-				  	<figcaption class="figure-caption text-xs-center">!emo vira</figcaption>
-				</figure>
-				<figure class="figure">
-				  	<img src="images/wanpan.png" class="figure-img img-fluid" alt="!emo wanpan" data-toggle="tooltip" data-placement="bottom" title="!emo vira">
-				  	<figcaption class="figure-caption text-xs-center">!emo wanpan</figcaption>
-				</figure>
-				<figure class="figure">
-				  	<img src="images/whale.png" class="figure-img img-fluid" alt="!emo whale" data-toggle="tooltip" data-placement="bottom" title="!emo vira">
-				  	<figcaption class="figure-caption text-xs-center">!emo whale</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/bingo.png" class="figure-img img-fluid" alt="!emo bingo">
-					<figcaption class="figure-caption text-xs-center">!emo bingo</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/christmas.png" class="figure-img img-fluid" alt="!emo christmas">
-					<figcaption class="figure-caption text-xs-center">!emo christmas</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/claris2.png" class="figure-img img-fluid" alt="!emo claris2">
-					<figcaption class="figure-caption text-xs-center">!emo claris2</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/confuseray.png" class="figure-img img-fluid" alt="!emo confuseray">
-					<figcaption class="figure-caption text-xs-center">!emo confuseray</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/ferry.png" class="figure-img img-fluid" alt="!emo ferry">
-					<figcaption class="figure-caption text-xs-center">!emo ferry</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/goodmorning.png" class="figure-img img-fluid" alt="!emo goodmorning">
-					<figcaption class="figure-caption text-xs-center">!emo goodmorning</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/goodnight.png" class="figure-img img-fluid" alt="!emo goodnight">
-					<figcaption class="figure-caption text-xs-center">!emo goodnight</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/hohoho.png" class="figure-img img-fluid" alt="!emo hohoho">
-					<figcaption class="figure-caption text-xs-center">!emo hohoho</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/hrt.png" class="figure-img img-fluid" alt="!emo hrt">
-					<figcaption class="figure-caption text-xs-center">!emo hrt</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/keepcalm.png" class="figure-img img-fluid" alt="!emo keepcalm">
-					<figcaption class="figure-caption text-xs-center">!emo keepcalm</figcaption>
-				</figure>
-				<figure class="figure">
-					<img src="images/keepcalm2.png" class="figure-img img-fluid" alt="!emo keepcalm2">
-					<figcaption class="figure-caption text-xs-center">!emo keepcalm2</figcaption>
-				</figure>
-				<figure class="figure">
+					<figure class="figure">
+					  	<img src="images/vira.png" class="figure-img img-fluid" alt="!emo vira" data-toggle="tooltip" data-placement="bottom" title="!emo vira">
+					  	<figcaption class="figure-caption text-xs-center">!emo vira</figcaption>
+					</figure>
+					<figure class="figure">
+					  	<img src="images/wanpan.png" class="figure-img img-fluid" alt="!emo wanpan" data-toggle="tooltip" data-placement="bottom" title="!emo vira">
+					  	<figcaption class="figure-caption text-xs-center">!emo wanpan</figcaption>
+					</figure>
+					<figure class="figure">
+					  	<img src="images/whale.png" class="figure-img img-fluid" alt="!emo whale" data-toggle="tooltip" data-placement="bottom" title="!emo vira">
+					  	<figcaption class="figure-caption text-xs-center">!emo whale</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/bingo.png" class="figure-img img-fluid" alt="!emo bingo">
+						<figcaption class="figure-caption text-xs-center">!emo bingo</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/christmas.png" class="figure-img img-fluid" alt="!emo christmas">
+						<figcaption class="figure-caption text-xs-center">!emo christmas</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/claris2.png" class="figure-img img-fluid" alt="!emo claris2">
+						<figcaption class="figure-caption text-xs-center">!emo claris2</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/confuseray.png" class="figure-img img-fluid" alt="!emo confuseray">
+						<figcaption class="figure-caption text-xs-center">!emo confuseray</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/ferry.png" class="figure-img img-fluid" alt="!emo ferry">
+						<figcaption class="figure-caption text-xs-center">!emo ferry</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/goodmorning.png" class="figure-img img-fluid" alt="!emo goodmorning">
+						<figcaption class="figure-caption text-xs-center">!emo goodmorning</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/goodnight.png" class="figure-img img-fluid" alt="!emo goodnight">
+						<figcaption class="figure-caption text-xs-center">!emo goodnight</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/hohoho.png" class="figure-img img-fluid" alt="!emo hohoho">
+						<figcaption class="figure-caption text-xs-center">!emo hohoho</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/hrt.png" class="figure-img img-fluid" alt="!emo hrt">
+						<figcaption class="figure-caption text-xs-center">!emo hrt</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/keepcalm.png" class="figure-img img-fluid" alt="!emo keepcalm">
+						<figcaption class="figure-caption text-xs-center">!emo keepcalm</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/keepcalm2.png" class="figure-img img-fluid" alt="!emo keepcalm2">
+						<figcaption class="figure-caption text-xs-center">!emo keepcalm2</figcaption>
+					</figure>
+					<figure class="figure">
+					<figure class="figure">
+						<img src="images/wtf.png" class="figure-img img-fluid" alt="!emo wtf">
+						<figcaption class="figure-caption text-xs-center">!emo wtf</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/helpme.png" class="figure-img img-fluid" alt="!emo helpme">
+						<figcaption class="figure-caption text-xs-center">!emo helpme</figcaption>
+					</figure>
 					<img src="images/kmr.png" class="figure-img img-fluid" alt="!emo kmr">
 						<figcaption class="figure-caption text-xs-center">!emo kmr</figcaption>
 					</figure>
@@ -498,10 +509,6 @@
 					<figure class="figure">
 						<img src="images/help.png" class="figure-img img-fluid" alt="!emo help">
 						<figcaption class="figure-caption text-xs-center">!emo help</figcaption>
-					</figure>
-					<figure class="figure">
-						<img src="images/helpme.png" class="figure-img img-fluid" alt="!emo helpme">
-						<figcaption class="figure-caption text-xs-center">!emo helpme</figcaption>
 					</figure>
 					<figure class="figure">
 						<img src="images/helpwait.png" class="figure-img img-fluid" alt="!emo helpwait">
@@ -820,10 +827,6 @@
 					<figure class="figure">
 						<img src="images/wink.png" class="figure-img img-fluid" alt="!emo wink">
 						<figcaption class="figure-caption text-xs-center">!emo wink</figcaption>
-					</figure>
-					<figure class="figure">
-						<img src="images/wtf.png" class="figure-img img-fluid" alt="!emo wtf">
-						<figcaption class="figure-caption text-xs-center">!emo wtf</figcaption>
 					</figure>
 					<figure class="figure">
 						<img src="images/wut.png" class="figure-img img-fluid" alt="!emo wut">
