--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				</div>
 				
 				<h5>Aoshi's works<h5>
-				<p>
+				<p class="details">
 					For more of Aoshi's work, please check our her twitter at <a href="https://twitter.com/AoshiArt">https://twitter.com/AoshiArt</a>
 				</p>
 				<div class='emoji-grid'>
