--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				
 				<h4>Aoshi's works<h4>
 				<p class="details">
-					For more of Aoshi's work, please check our her twitter at <a href="https://twitter.com/AoshiArt">https://twitter.com/AoshiArt</a>
+					For more of Aoshi's work, please check out her twitter at <a href="https://twitter.com/AoshiArt">https://twitter.com/AoshiArt</a>
 				</p>
 				<div class='emoji-grid'>
 					<figure class="figure">
