--- a/index.html
+++ b/index.html
@@ -349,8 +349,12 @@
 						<figcaption class="figure-caption text-xs-center">!emo embarass</figcaption>
 					</figure>
 					<figure class="figure">
-						<img src="images/failv frolic.png" class="figure-img img-fluid" alt="!emo failv frolic">
-						<figcaption class="figure-caption text-xs-center">!emo failv frolic</figcaption>
+						<img src="images/fail.png" class="figure-img img-fluid" alt="!emo fail">
+						<figcaption class="figure-caption text-xs-center">!emo fail</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/frolic.png" class="figure-img img-fluid" alt="!emo frolic">
+						<figcaption class="figure-caption text-xs-center">!emo frolic</figcaption>
 					</figure>
 					<figure class="figure">
 						<img src="images/full.png" class="figure-img img-fluid" alt="!emo full">
