--- a/index.html
+++ b/index.html
@@ -777,8 +777,8 @@
 						<figcaption class="figure-caption text-xs-center">!emo nio</figcaption>
 					</figure>
 					<figure class="figure">
-						<img src="images/parraot.png" class="figure-img img-fluid" alt="!emo parraot">
-						<figcaption class="figure-caption text-xs-center">!emo parraot</figcaption>
+						<img src="images/parrot.png" class="figure-img img-fluid" alt="!emo parrot">
+						<figcaption class="figure-caption text-xs-center">!emo parrot</figcaption>
 					</figure>
 					<figure class="figure">
 						<img src="images/pain.png" class="figure-img img-fluid" alt="!emo pain">
