--- a/index.html
+++ b/index.html
@@ -845,7 +845,54 @@
 						<img src="images/hurray.png" class="figure-img img-fluid" alt="!emo hurray">
 						<figcaption class="figure-caption text-xs-center">!emo hurray</figcaption>
 					</figure>
-					
+					<figure class="figure">
+						<img src="images/whoops.png" class="figure-img img-fluid" alt="!emo whoops">
+						<figcaption class="figure-caption text-xs-center">!emo whoops</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/tada.png" class="figure-img img-fluid" alt="!emo tada">
+						<figcaption class="figure-caption text-xs-center">!emo tada</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/achoo.png" class="figure-img img-fluid" alt="!emo achoo">
+						<figcaption class="figure-caption text-xs-center">!emo achoo</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/boom.png" class="figure-img img-fluid" alt="!emo boom">
+						<figcaption class="figure-caption text-xs-center">!emo boom</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/chomp.png" class="figure-img img-fluid" alt="!emo chomp">
+						<figcaption class="figure-caption text-xs-center">!emo chomp</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/aww.png" class="figure-img img-fluid" alt="!emo aww">
+						<figcaption class="figure-caption text-xs-center">!emo aww</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/foryou.png" class="figure-img img-fluid" alt="!emo foryou">
+						<figcaption class="figure-caption text-xs-center">!emo foryou</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/nice2.png" class="figure-img img-fluid" alt="!emo nice2">
+						<figcaption class="figure-caption text-xs-center">!emo nice2</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/aboutthat.png" class="figure-img img-fluid" alt="!emo aboutthat">
+						<figcaption class="figure-caption text-xs-center">!emo aboutthat</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/ohono.png" class="figure-img img-fluid" alt="!emo ohono">
+						<figcaption class="figure-caption text-xs-center">!emo ohono</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/bop.png" class="figure-img img-fluid" alt="!emo bop">
+						<figcaption class="figure-caption text-xs-center">!emo bop</figcaption>
+					</figure>
+					<figure class="figure">
+						<img src="images/drip.png" class="figure-img img-fluid" alt="!emo drip">
+						<figcaption class="figure-caption text-xs-center">!emo drip</figcaption>
+					</figure>
 				</div>
 				
 				<h4>Emotes</h4>
