--- a/index.html
+++ b/index.html
@@ -882,8 +882,8 @@
 						<figcaption class="figure-caption text-xs-center">!emo aboutthat</figcaption>
 					</figure>
 					<figure class="figure">
-						<img src="images/ohono.png" class="figure-img img-fluid" alt="!emo ohono">
-						<figcaption class="figure-caption text-xs-center">!emo ohono</figcaption>
+						<img src="images/ohno.png" class="figure-img img-fluid" alt="!emo ohno">
+						<figcaption class="figure-caption text-xs-center">!emo ohno</figcaption>
 					</figure>
 					<figure class="figure">
 						<img src="images/bop.png" class="figure-img img-fluid" alt="!emo bop">
