--- a/index.html
+++ b/index.html
@@ -314,15 +314,15 @@
 					</figure>
 
                     <figure class="figure">
-                        <img src="emoji/ris.png" class="figure-img img-fluid" alt="!emo ris">
+                        <img src="images/ris.png" class="figure-img img-fluid" alt="!emo ris">
                         <figcaption class="figure-caption text-xs-center">!emo ris</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="emoji/shhh.png" class="figure-img img-fluid" alt="!emo shhh">
+                        <img src="images/shhh.png" class="figure-img img-fluid" alt="!emo shhh">
                         <figcaption class="figure-caption text-xs-center">!emo shhh</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="emoji/daonao.png" class="figure-img img-fluid" alt="!emo daonao">
+                        <img src="images/daonao.png" class="figure-img img-fluid" alt="!emo daonao">
                         <figcaption class="figure-caption text-xs-center">!emo daonao</figcaption>
                     </figure>
 				</div>
@@ -1075,15 +1075,15 @@
 						<figcaption class="figure-caption text-xs-center">!emo gong</figcaption>
 					</figure>
                     <figure class="figure">
-                        <img src="emoji/twirl2.png" class="figure-img img-fluid" alt="!emo twirl2">
+                        <img src="images/twirl2.png" class="figure-img img-fluid" alt="!emo twirl2">
                         <figcaption class="figure-caption text-xs-center">!emo twirl2</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="emoji/rawr2.png" class="figure-img img-fluid" alt="!emo rawr2">
+                        <img src="images/rawr2.png" class="figure-img img-fluid" alt="!emo rawr2">
                         <figcaption class="figure-caption text-xs-center">!emo rawr2</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="emoji/centrumplz.png" class="figure-img img-fluid" alt="!emo centrumplz">
+                        <img src="images/centrumplz.png" class="figure-img img-fluid" alt="!emo centrumplz">
                         <figcaption class="figure-caption text-xs-center">!emo centrumplz</figcaption>
                     </figure>
 
