--- a/index.html
+++ b/index.html
@@ -325,6 +325,39 @@
                         <img src="images/daonao.png" class="figure-img img-fluid" alt="!emo daonao">
                         <figcaption class="figure-caption text-xs-center">!emo daonao</figcaption>
                     </figure>
+
+<figure class="figure">
+	<img src="images/bewbs.png" class="figure-img img-fluid" alt="!emo bewbs">
+	<figcaption class="figure-caption text-xs-center">!emo bewbs</figcaption>
+</figure>
+<figure class="figure">
+	<img src="images/cheers.png" class="figure-img img-fluid" alt="!emo cheers">
+	<figcaption class="figure-caption text-xs-center">!emo cheers</figcaption>
+</figure>
+<figure class="figure">
+	<img src="images/fight.png" class="figure-img img-fluid" alt="!emo fight">
+	<figcaption class="figure-caption text-xs-center">!emo fight</figcaption>
+</figure>
+<figure class="figure">
+	<img src="images/food.png" class="figure-img img-fluid" alt="!emo food">
+	<figcaption class="figure-caption text-xs-center">!emo food</figcaption>
+</figure>
+<figure class="figure">
+	<img src="images/hmm.png" class="figure-img img-fluid" alt="!emo hmm">
+	<figcaption class="figure-caption text-xs-center">!emo hmm</figcaption>
+</figure>
+<figure class="figure">
+	<img src="images/kill.png" class="figure-img img-fluid" alt="!emo kill">
+	<figcaption class="figure-caption text-xs-center">!emo kill</figcaption>
+</figure>
+<figure class="figure">
+	<img src="images/kmrwhy.png" class="figure-img img-fluid" alt="!emo kmrwhy">
+	<figcaption class="figure-caption text-xs-center">!emo kmrwhy</figcaption>
+</figure>
+<figure class="figure">
+	<img src="images/sofat.png" class="figure-img img-fluid" alt="!emo sofat">
+	<figcaption class="figure-caption text-xs-center">!emo sofat</figcaption>
+</figure>
 				</div>
 				
 				<h4>Vyrn</h4>
