--- a/index.html
+++ b/index.html
@@ -939,6 +939,178 @@
 						<img src="images/drip.png" class="figure-img img-fluid" alt="!emo drip">
 						<figcaption class="figure-caption text-xs-center">!emo drip</figcaption>
 					</figure>
+          <figure class="figure">
+            <img src="images/thump.png" class="figure-img img-fluid" alt="!emo thump">
+            <figcaption class="figure-caption text-xs-center">!emo thump</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/whyme.png" class="figure-img img-fluid" alt="!emo whyme">
+            <figcaption class="figure-caption text-xs-center">!emo whyme</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/mission.png" class="figure-img img-fluid" alt="!emo mission">
+            <figcaption class="figure-caption text-xs-center">!emo mission</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/saidtoomuch.png" class="figure-img img-fluid" alt="!emo saidtoomuch">
+            <figcaption class="figure-caption text-xs-center">!emo saidtoomuch</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/what2.png" class="figure-img img-fluid" alt="!emo what2">
+            <figcaption class="figure-caption text-xs-center">!emo what2</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/huh2.png" class="figure-img img-fluid" alt="!emo huh2">
+            <figcaption class="figure-caption text-xs-center">!emo huh2</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/nocando.png" class="figure-img img-fluid" alt="!emo nocando">
+            <figcaption class="figure-caption text-xs-center">!emo nocando</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/ten.png" class="figure-img img-fluid" alt="!emo ten">
+            <figcaption class="figure-caption text-xs-center">!emo ten</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/toocool.png" class="figure-img img-fluid" alt="!emo toocool">
+            <figcaption class="figure-caption text-xs-center">!emo toocool</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/fail2.png" class="figure-img img-fluid" alt="!emo fail2">
+            <figcaption class="figure-caption text-xs-center">!emo fail2</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/slap.png" class="figure-img img-fluid" alt="!emo slap">
+            <figcaption class="figure-caption text-xs-center">!emo slap</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/nooo.png" class="figure-img img-fluid" alt="!emo nooo">
+            <figcaption class="figure-caption text-xs-center">!emo nooo</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/heyo.png" class="figure-img img-fluid" alt="!emo heyo">
+            <figcaption class="figure-caption text-xs-center">!emo heyo</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/nope.png" class="figure-img img-fluid" alt="!emo nope">
+            <figcaption class="figure-caption text-xs-center">!emo nope</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/whatsup.png" class="figure-img img-fluid" alt="!emo whatsup">
+            <figcaption class="figure-caption text-xs-center">!emo whatsup</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/poke.png" class="figure-img img-fluid" alt="!emo poke">
+            <figcaption class="figure-caption text-xs-center">!emo poke</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/commandme.png" class="figure-img img-fluid" alt="!emo commandme">
+            <figcaption class="figure-caption text-xs-center">!emo commandme</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/wiggle.png" class="figure-img img-fluid" alt="!emo wiggle">
+            <figcaption class="figure-caption text-xs-center">!emo wiggle</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/yea.png" class="figure-img img-fluid" alt="!emo yea">
+            <figcaption class="figure-caption text-xs-center">!emo yea</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/pft.png" class="figure-img img-fluid" alt="!emo pft">
+            <figcaption class="figure-caption text-xs-center">!emo pft</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/siero2.png" class="figure-img img-fluid" alt="!emo siero2">
+            <figcaption class="figure-caption text-xs-center">!emo siero2</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/quiet.png" class="figure-img img-fluid" alt="!emo quiet">
+            <figcaption class="figure-caption text-xs-center">!emo quiet</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/bye.png" class="figure-img img-fluid" alt="!emo bye">
+            <figcaption class="figure-caption text-xs-center">!emo bye</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/peace2.png" class="figure-img img-fluid" alt="!emo peace2">
+            <figcaption class="figure-caption text-xs-center">!emo peace2</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/yummy2.png" class="figure-img img-fluid" alt="!emo yummy2">
+            <figcaption class="figure-caption text-xs-center">!emo yummy2</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/easy.png" class="figure-img img-fluid" alt="!emo easy">
+            <figcaption class="figure-caption text-xs-center">!emo easy</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/nailedit.png" class="figure-img img-fluid" alt="!emo nailedit">
+            <figcaption class="figure-caption text-xs-center">!emo nailedit</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/please.png" class="figure-img img-fluid" alt="!emo please">
+            <figcaption class="figure-caption text-xs-center">!emo please</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/lily.png" class="figure-img img-fluid" alt="!emo lily">
+            <figcaption class="figure-caption text-xs-center">!emo lily</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/rainbow.png" class="figure-img img-fluid" alt="!emo rainbow">
+            <figcaption class="figure-caption text-xs-center">!emo rainbow</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/rip.png" class="figure-img img-fluid" alt="!emo rip">
+            <figcaption class="figure-caption text-xs-center">!emo rip</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/swordplz.png" class="figure-img img-fluid" alt="!emo swordplz">
+            <figcaption class="figure-caption text-xs-center">!emo swordplz</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/pout.png" class="figure-img img-fluid" alt="!emo pout">
+            <figcaption class="figure-caption text-xs-center">!emo pout</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/sara.png" class="figure-img img-fluid" alt="!emo sara">
+            <figcaption class="figure-caption text-xs-center">!emo sara</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/ohhh.png" class="figure-img img-fluid" alt="!emo ohhh">
+            <figcaption class="figure-caption text-xs-center">!emo ohhh</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/rose.png" class="figure-img img-fluid" alt="!emo rose">
+            <figcaption class="figure-caption text-xs-center">!emo rose</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/fenrir.png" class="figure-img img-fluid" alt="!emo fenrir">
+            <figcaption class="figure-caption text-xs-center">!emo fenrir</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/potato.png" class="figure-img img-fluid" alt="!emo potato">
+            <figcaption class="figure-caption text-xs-center">!emo potato</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/djeanne.png" class="figure-img img-fluid" alt="!emo djeanne">
+            <figcaption class="figure-caption text-xs-center">!emo djeanne</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/jawaii.png" class="figure-img img-fluid" alt="!emo jawaii">
+            <figcaption class="figure-caption text-xs-center">!emo jawaii</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/djeeta.png" class="figure-img img-fluid" alt="!emo djeeta">
+            <figcaption class="figure-caption text-xs-center">!emo djeeta</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/lyria2.png" class="figure-img img-fluid" alt="!emo lyria2">
+            <figcaption class="figure-caption text-xs-center">!emo lyria2</figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="images/sen.png" class="figure-img img-fluid" alt="!emo sen">
+            <figcaption class="figure-caption text-xs-center">!emo sen</figcaption>
+          </figure>
 				</div>
 				
 				<h4>Emotes</h4>
