--- a/index.html
+++ b/index.html
@@ -1096,8 +1096,8 @@
             <figcaption class="figure-caption text-xs-center">!emo djeanne</figcaption>
           </figure>
           <figure class="figure">
-            <img src="images/jawaii.png" class="figure-img img-fluid" alt="!emo jawaii">
-            <figcaption class="figure-caption text-xs-center">!emo jawaii</figcaption>
+            <img src="images/kawaii.png" class="figure-img img-fluid" alt="!emo kawaii">
+            <figcaption class="figure-caption text-xs-center">!emo kawaii</figcaption>
           </figure>
           <figure class="figure">
             <img src="images/djeeta.png" class="figure-img img-fluid" alt="!emo djeeta">
